Se agregó Addresses, y Redis. Tambien se corrigieron Bugs y se ampliaron los test unitarios con predis. Tambien se agregaron mas validaciones a las apis
